# rag_poc

./: .env.example  .gitignore  CLAUDE.md  README.md  README_Docling_Setup.md  configure_pip_mirrors.py  example_usage.py  install_docling_macos_intel.sh  main.py  pyproject.toml  test_all_modes.py  test_connection.py  test_macos_ocr.py  test_mps.py  verify_macos_ocr.py
src/rag_poc/: __init__.py  rag_pipeline.py
src/rag_poc/document_processing/: __init__.py  docling_mps_converter.py  document_converter.py  enhanced_docling_converter.py  html_splitter.py  macos_ocr_converter.py  simple_pdf_converter.py
src/rag_poc/embedding/: __init__.py  azure_openai_embeddings.py
src/rag_poc/vectorstore/: __init__.py  faiss_store.py
